Working needle and signal strength

--- a/er-client/device.html
+++ b/er-client/device.html
@@ -37,6 +37,10 @@
                 </g>
                 
             </svg>
+
+            <h3>Signal strength</h3>
+            <progress id="signal_strength" value="0" max="10" />
+
         </article>
 
     </main>
