--- a/er-client/device.html
+++ b/er-client/device.html
@@ -27,7 +27,7 @@
             <svg width="100%" height="200" viewBox="0 0 200 200">
                 <g id="compass" transform="translate(100, 100)">
                     <!-- Circle stroke -->
-                    <circle cx="0" cy="0" r="90" fill="none" stroke="black" stroke-width="2" stroke-opacity="1"/>
+                    <circle cx="0" cy="0" r="90" fill="white" stroke="black" stroke-width="2" stroke-opacity="1"/>
                     <!-- "N" character -->
                     <text x="0" y="-65" text-anchor="middle" font-family="Arial" font-size="24" fill="black">N</text>
                     <g id="needle">
