--- a/er-client/index.html
+++ b/er-client/index.html
@@ -2,9 +2,9 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="%BASE_URL%favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Easter run</title>
+    <title>Tessertrack 5S</title>
   </head>
   <body>
     <div id="app"></div>
